# dagster-db

./: README.md  pyproject.toml  version.py
.github/workflows/: python-publish.yml
dagster_db/: __init__.py
dagster_db/helpers/: db.py  duckdb.py  pandas.py  sql_query.py
dagster_db/io_managers/: custom_db_io_manager.py  duckdb_io_manager.py
dagster_db/query/: sql_query.py
dagster_db/type_handlers/: custom_type_handler.py  duckdb_pandas.py  duckdb_polars.py  duckdb_sql_query.py
io_managers/: custom_db_io_manager.py  duckdb_io_manager.py
tests/: test_sql_query.py
type_handlers/: duckdb_pandas.py  duckdb_polars.py
