[project]
name = "dagster-db"
version = "0.1.0"
description = "Dagster IO managers and type handlers for databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.9.11",
    "dagster-duckdb>=0.25.11",
    "dagster-gcp>=0.25.11",
    "dagster-pandas>=0.25.11",
    "dagster-polars>=0.25.11",
]
