[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-db"
version = "0.1.3"
description = "Dagster IO managers and type handlers for databases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster>=1.9.11",
    "dagster-duckdb>=0.25.11",
    "dagster-gcp>=0.25.11",
    "dagster-pandas>=0.25.11",
    "dagster-polars>=0.25.11",
]
urls = { "Source" = "https://github.com/j-blackwell/dagster-db" }
authors = [
    { name = "James Blackwell", email = "33688964+j-blackwell@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools.packages]
find = {}
